# BHP-solver

./: Cargo.toml  README.md  rustfmt.toml
examples/: error_plotter.rs  examples.rs
src/: const_value.rs  lib.rs  sp_func.rs  utilies.rs
src/ffi/: ffi_series.rs  ffi_sph.rs  mod.rs
src/jh/: mod.rs
src/jh/lo_series/: mod.rs
src/jh/local_solution/: mod.rs  poly.rs
src/sph/: band_solve.rs  mod.rs
